docs: restructure quickstart and development guides
- Replace generic Mintlify content with Rails-specific setup
- Add step-by-step SDK installation and initialization
- Include transaction examples and error handling patterns
- Add environment configuration best practices
- Add IDE recommendations and troubleshooting section
- Remove test section from development guide (SDK release policy)

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,80 +1,114 @@
 ---
 title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+description: "Get started with the Rails Banking API and TypeScript SDK in minutes"
 ---
 
-## Get started in three steps
+This quickstart guide will help you integrate Rails into your application. You'll learn how to set up authentication, make your first API call, and start using the SDK.
 
-Get your documentation site running locally and make your first customization.
+<Steps>
+  <Step title="Install the SDK">
+    Install the Rails SDK using your preferred package manager:
 
-### Step 1: Set up your local environment
+    <Tabs>
+      <Tab title="npm">
+        ```bash
+        npm install @rails/sdk
+        ```
+      </Tab>
+      <Tab title="pnpm">
+        ```bash
+        pnpm add @rails/sdk
+        ```
+      </Tab>
+      <Tab title="yarn">
+        ```bash
+        yarn add @rails/sdk
+        ```
+      </Tab>
+    </Tabs>
+  </Step>
 
-<AccordionGroup>
-  <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
-    
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
-    
-    <Tip>Your preview updates automatically as you edit files.</Tip>
-  </Accordion>
-</AccordionGroup>
+  <Step title="Initialize the client">
+    Create a new Rails client instance with your API credentials:
 
-### Step 2: Deploy your changes
+    ```typescript
+    import { Rails } from "@rails/sdk";
 
-<AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
-    
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-</Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
+    const rails = new Rails({
+      serverURL: process.env.RAILS_API_URL,
+      security: {
+        bearerAuth: process.env.RAILS_API_KEY,
+      },
+    });
+    ```
 
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
+    <Info>
+      Get your API credentials from the [Rails Dashboard](https://dashboard.rails.example.com)
+    </Info>
+  </Step>
 
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
-  </Accordion>
-</AccordionGroup>
+  <Step title="Make your first transaction">
+    Create a simple transaction to verify everything is working:
 
-### Step 3: Go live
+    ```typescript
+    // Create a new transaction
+    const transaction = await rails.transactions.create({
+      fromAccount: "acct_1a2b3c4d",
+      toAccount: "acct_5e6f7g8h",
+      amount: 100,
+      currency: "USD",
+      description: "Test transaction",
+    });
 
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
-</Accordion>
+    console.log("Transaction created:", transaction.id);
+    ```
+  </Step>
+
+  <Step title="Handle responses and errors">
+    The SDK provides type-safe responses and comprehensive error handling:
+
+    ```typescript
+    try {
+      const result = await rails.transactions.create({
+        fromAccount: "acct_1a2b3c4d",
+        toAccount: "acct_5e6f7g8h",
+        amount: 100,
+        currency: "USD",
+      });
+
+      // Success - transaction created
+      console.log("Success:", result);
+    } catch (error) {
+      // Handle specific error types
+      if (error instanceof RailsSDKError) {
+        console.error("API Error:", error.message);
+      } else {
+        console.error("Unexpected error:", error);
+      }
+    }
+    ```
+
+    See [Error Handling](/guides/sdk-error-handling) for detailed error handling patterns.
+  </Step>
+</Steps>
 
 ## Next steps
 
-Now that you have your docs running, explore these key features:
-
 <CardGroup cols={2}>
-
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
-</Card>
-
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
-</Card>
-
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
-</Card>
-
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
-
+  <Card title="Core Methods" icon="function" href="/guides/sdk-core-methods">
+    Learn all available SDK operations and methods
+  </Card>
+  <Card title="API Reference" icon="terminal" href="/api-reference/introduction">
+    Complete REST API documentation
+  </Card>
+  <Card title="Error Handling" icon="shield" href="/guides/sdk-error-handling">
+    Robust error handling and retry strategies
+  </Card>
+  <Card title="Examples" icon="code" href="/guides/sdk-examples">
+    Real-world code examples and use cases
+  </Card>
 </CardGroup>
 
-<Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
-</Note>
+<Tip>
+Stuck? Check the [troubleshooting section](/guides/sdk-error-handling#troubleshooting) or review our [examples](/guides/sdk-examples).
+</Tip>
