--- a/development.mdx
+++ b/development.mdx
@@ -1,94 +1,149 @@
 ---
-title: 'Development'
-description: 'Preview changes locally to update your docs'
+title: "Development"
+description: "Set up a local development environment for Rails"
 ---
 
 <Info>
   **Prerequisites**:
-  - Node.js version 19 or higher
-  - A docs repository with a `docs.json` file
+  - Node.js version 18 or higher
+  - npm, yarn, or pnpm
+  - Git
+  - A Rails API server instance (local or remote)
 </Info>
 
-Follow these steps to install and run Mintlify on your operating system.
+This guide covers setting up your development environment to build with the Rails SDK.
 
 <Steps>
-<Step title="Install the Mintlify CLI">
+  <Step title="Install Node.js dependencies">
+    First, ensure you have a compatible version of Node.js installed:
 
-```bash
-npm i -g mint
-```
-</Step>
+    ```bash
+    node --version  # Should be 18 or higher
+    ```
 
-<Step title="Preview locally">
+    Initialize a new project or navigate to your existing one:
 
-Navigate to your docs directory where your `docs.json` file is located, and run the following command:
+    ```bash
+    npm init -y
+    npm install @rails/sdk
+    ```
+  </Step>
 
-```bash
-mint dev
-```
+  <Step title="Configure your environment">
+    Create a `.env.local` file in your project root with your Rails API credentials:
 
-A local preview of your documentation will be available at `http://localhost:3000`.
+    ```bash
+    RAILS_API_URL=http://localhost:8000/api
+    RAILS_API_KEY=your_api_key_here
+    ```
 
-</Step>
+    <Warning>
+      Never commit `.env.local` to version control. Add it to your `.gitignore` file.
+    </Warning>
+  </Step>
+
+  <Step title="Initialize the SDK in your code">
+    Create a configuration file to initialize the Rails client:
+
+    ```typescript
+    // src/rails-client.ts
+    import { Rails } from "@rails/sdk";
+
+    export const rails = new Rails({
+      serverURL: process.env.RAILS_API_URL,
+      security: {
+        bearerAuth: process.env.RAILS_API_KEY,
+      },
+    });
+    ```
+  </Step>
+
+  <Step title="Start developing">
+    You can now start using the Rails SDK in your application:
+
+    ```typescript
+    import { rails } from "./rails-client";
+
+    async function main() {
+      const accounts = await rails.accounts.list();
+      console.log(accounts);
+    }
+
+    main();
+    ```
+  </Step>
 </Steps>
 
-## Custom ports
+## Local API server
 
-By default, Mintlify uses port 3000. You can customize the port Mintlify runs on by using the `--port` flag. For example, to run Mintlify on port 3333, use this command:
-
-```bash
-mint dev --port 3333
-```
-
-If you attempt to run Mintlify on a port that's already in use, it will use the next available port:
-
-```md
-Port 3000 is already in use. Trying 3001 instead.
-```
-
-## Mintlify versions
-
-Please note that each CLI release is associated with a specific version of Mintlify. If your local preview does not align with the production version, please update the CLI:
+If you're running a local Rails API server for development, start it with:
 
 ```bash
-npm mint update
+cd /path/to/rails/api
+npm run dev
 ```
 
-## Validating links
+The server typically starts on `http://localhost:8000`. Update your `.env.local` file accordingly.
 
-The CLI can assist with validating links in your documentation. To identify any broken links, use the following command:
+## IDE extensions
 
-```bash
-mint broken-links
-```
+We recommend the following VSCode extensions for development:
 
-## Deployment
-
-If the deployment is successful, you should see the following:
-
-<Frame>
-  <img src="/images/checks-passed.png" alt="Screenshot of a deployment confirmation message that says All checks have passed." style={{ borderRadius: '0.5rem' }} />
-</Frame>
-
-## Code formatting
-
-We suggest using extensions on your IDE to recognize and format MDX. If you're a VSCode user, consider the [MDX VSCode extension](https://marketplace.visualstudio.com/items?itemName=unifiedjs.vscode-mdx) for syntax highlighting, and [Prettier](https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode) for code formatting.
+- [TypeScript Vue Plugin](https://marketplace.visualstudio.com/items?itemName=Vue.vscode-typescript-vue-plugin) - For better TypeScript support
+- [Prettier](https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode) - Code formatting
+- [ESLint](https://marketplace.visualstudio.com/items?itemName=dbaeumer.vscode-eslint) - Linting
 
 ## Troubleshooting
 
 <AccordionGroup>
-  <Accordion title='Error: Could not load the "sharp" module using the darwin-arm64 runtime'>
+  <Accordion title="Connection refused error">
+    If you see `ECONNREFUSED`, ensure:
+    1. Your Rails API server is running
+    2. `RAILS_API_URL` points to the correct server address
+    3. The API key in `RAILS_API_KEY` is valid
 
-    This may be due to an outdated version of node. Try the following:
-    1. Remove the currently-installed version of the CLI: `npm remove -g mint`
-    2. Upgrade to Node v19 or higher.
-    3. Reinstall the CLI: `npm i -g mint`
+    Test connectivity with:
+    ```bash
+    curl $RAILS_API_URL/health
+    ```
   </Accordion>
 
-  <Accordion title="Issue: Encountering an unknown error">
-  
-    Solution: Go to the root of your device and delete the `~/.mintlify` folder. Then run `mint dev` again.
+  <Accordion title="Module not found error">
+    Ensure the SDK is properly installed:
+
+    ```bash
+    npm install @rails/sdk
+    npm ls @rails/sdk
+    ```
+
+    If issues persist, try clearing node_modules and reinstalling:
+    ```bash
+    rm -rf node_modules package-lock.json
+    npm install
+    ```
+  </Accordion>
+
+  <Accordion title="TypeScript errors">
+    Make sure your `tsconfig.json` is configured correctly:
+
+    ```json
+    {
+      "compilerOptions": {
+        "target": "ES2020",
+        "module": "ESNext",
+        "lib": ["ES2020"]
+      }
+    }
+    ```
   </Accordion>
 </AccordionGroup>
 
-Curious about what changed in the latest CLI version? Check out the [CLI changelog](https://www.npmjs.com/package/mintlify?activeTab=versions).
+## Next steps
+
+- Read the [SDK Installation](/guides/sdk-installation) guide for detailed setup
+- Check out [Core Methods](/guides/sdk-core-methods) to learn what you can do
+- Review [Examples](/guides/sdk-examples) for common patterns
+
+<Tip>
+Need help? Join our [community](https://community.rails.example.com) or check the [FAQ](/guides/sdk-error-handling#faq).
+</Tip>
