docs: update landing page and readme
- Update index.mdx with Rails API branding
- Add quick start and API reference links
- Update README for documentation setup

--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,73 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Rails API Documentation"
+description: "Build modern financial infrastructure with the Rails Banking API and TypeScript SDK"
 ---
 
-## Setting up
+## Welcome to Rails
 
-Get your documentation site up and running in minutes.
+Rails is a modern banking infrastructure API designed for seamless financial transactions, multi-currency support, and intelligent transaction routing. This documentation covers the complete API, SDK integration guides, and best practices.
 
 <Card
-  title="Start here"
+  title="Get Started"
   icon="rocket"
   href="/quickstart"
   horizontal
 >
-  Follow our three step quickstart guide.
+  Integrate the Rails API in minutes with our quickstart guide.
 </Card>
 
-## Make it yours
-
-Design a docs site that looks great and empowers your users.
+## Quick Links
 
 <Columns cols={2}>
   <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
+    title="API Reference"
     icon="terminal"
     href="/api-reference/introduction"
   >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
-
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
+    Comprehensive REST API documentation with all endpoints, schemas, and examples.
   </Card>
   <Card
-    title="Code samples"
+    title="SDK Installation"
     icon="code"
-    href="/essentials/code"
+    href="/guides/sdk-installation"
   >
-    Add sample code to demonstrate how to use your product.
+    Get started with the auto-generated TypeScript SDK in minutes.
   </Card>
   <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
+    title="Core Methods"
+    icon="function"
+    href="/guides/sdk-core-methods"
   >
-    Display images and other media.
+    Reference for all SDK operations: transactions, ledger, settlement, metrics.
   </Card>
   <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
+    title="Error Handling"
+    icon="shield"
+    href="/guides/sdk-error-handling"
   >
-    Write once and reuse across your docs.
+    Robust error handling patterns and retry strategies.
+  </Card>
+  <Card
+    title="Integration Examples"
+    icon="sparkles"
+    href="/guides/sdk-examples"
+  >
+    Real-world code examples for payments, settlement, and monitoring.
+  </Card>
+  <Card
+    title="Core Concepts"
+    icon="book"
+    href="/development"
+  >
+    Understand transactions, settlement, multi-currency routing, and authentication.
   </Card>
 </Columns>
 
-## Need inspiration?
+## Key Features
 
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
+- **Multi-Currency Support** - Handle transactions across multiple currencies with intelligent conversion
+- **Transaction Routing** - Automatic intelligent routing between participating banks
+- **Settlement Engine** - Efficient batch settlement with configurable schedules
+- **Webhook Integration** - Real-time transaction status updates
+- **Type-Safe SDK** - Auto-generated TypeScript client with full type definitions
+- **Dashboard Analytics** - Real-time metrics and transaction insights
